src/test/ui/issues/issue-15965.stderr
error[E0618]: expected function, found `_`
  --> $DIR/issue-15965.rs:3:9
   |
LL |           { return () }
   |  _________-^^^^^^^^^^^^
LL | |
LL | |     ()
   | |______- call expression requires function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
